# twote

./: .gitignore  Cargo.toml  DOCKER.md  POSTGRES.md  README.md  SETUP.md  deny.toml  docker-compose.yaml  envoy.yaml
.github/: CODEOWNERS
.github/workflows/: CI.yaml  check.yaml  push-docker-images.yml  scheduled.yaml
.sqlx/: query-40f3450c8324a5c65555c169904066ee6a042a4a37224db085ec1ecc15f301ee.json  query-db2ba9042800dfcfb360ca9163ed0998b7363b8c083ef7c2b9c35f1b59750162.json  query-e6aedce04f0d04de7e7d07db20dfeb24d42b43d6ccc36c9a34f4158c3fa42dea.json  query-f2830f472fee044456ab3efaffc818958319fb37155468ed71998c29b34ad007.json
accounts-backend/: Cargo.toml  Dockerfile
accounts-backend/.sqlx/: query-59d80b4d20555c579574c13fea039a5479c21c1c3f98cbaecf7a54b6a82b9670.json
accounts-backend/migrations/: 20230924010305_create_users_table.sql
accounts-backend/src/: main.rs
accounts-backend/src/service/: login.rs
common/: Cargo.toml
common/src/: db.rs  helpers.rs  lib.rs  service.rs
common/src/db/: mongo.rs
common/src/middleware/: authentication.rs
documentation/: DOCKER.md  GRPC_WEB_AUTH.md  MIDDLEWARE.md  POSTGRES.md  REDIS.md  RUST_GRPC_BACKEND.md  SETUP.md  TEST_GRPC_FROM_TERMINAL.md
grpcurl-examples/: profile.md
images/accounts-db/: Dockerfile
images/twote-javascript-runtime/: Dockerfile
images/twote-rust-builder/: Dockerfile
images/twote-rust-runtime/: Dockerfile
profiles-backend/: Cargo.toml  Dockerfile
profiles-backend/src/: main.rs
profiles-backend/src/service/: profile.rs
resources/: twote-architecture.excalidraw
schemas/: Cargo.toml  README.md  build.rs
schemas/protos/: account.proto  hello.proto  login.proto  profile.proto  tweet.proto
schemas/protos/backend/: tweet.proto
schemas/protos/frontend/: home_page.proto  profile_page.proto  tweet.proto
schemas/src/: lib.rs
scripts/: bootstrap_docker.sh  init-accounts-db.sql  proto.sh
scripts/windows/: bootstrap_docker.ps1  proto.ps1
tweets-backend/: Cargo.toml  Dockerfile
tweets-backend/src/: main.rs
tweets-backend/src/service/: mod.rs  tweet.rs  tweets.rs
twote-api/: Cargo.toml  Dockerfile
twote-api/src/: main.rs
twote-api/src/service/: hello.rs  home_page.rs  login.rs  mod.rs  profile.rs  profile_page.rs  tweet.rs
twote-frontend/: .eslintignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
twote-frontend/src/: App.js
twote-frontend/src/components/: CreateAccountComponent.js  FetchDataComponent.js  HelloComponent.js  LoginComponent.js
twote-frontend/src/middleware/: AuthInterceptor.js
twote-frontend/src/proto/: hello_grpc_web_pb.js  hello_pb.js  login_grpc_web_pb.js  login_pb.js
twote-frontend/src/structure/: Background.js  Footer.js
twote-web/: Dockerfile  package-lock.json  package.json
twote-web/src/: App.css  App.js
twote-web/src/common/: DateUtil.js  UrlUtil.js
twote-web/src/components/: CreateAccountComponent.js  HelloComponent.js  HomePage.js  LoginComponent.js  TweetBoxComponent.css  TweetBoxComponent.js
twote-web/src/content/: MiniProfile.css  MiniProfile.js  Profile.css  Profile.js  Tweet.css  Tweet.js
twote-web/src/middleware/: AuthInterceptor.js
twote-web/src/pages/: HomePage.css  HomePage.js  ProfilePage.js
twote-web/src/structure/: Background.css  CenterColumn.js  Footer.js  Header.css  Header.js  Home.js  Logout.js  MiniProfile.js  ProfileButton.js
