[workspace]
members = [
    "common",
    "schemas",
    "twote-api",
    "accounts-backend"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.69"
thiserror = "1.0.48"
tonic = "0.10.0"
tonic-health = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
prost = "0.12.0"
sqlx = { version = "0.7.1", features = [ "runtime-tokio", "postgres", "uuid" ] }
validator = { version = "0.16.1", features = ["derive"] }
argon2 = { version = "0.5.1", features = ["std"] }
rand = { version = "0.8.1", features = ["std_rng"] }