[workspace]
members = [
    "common",
    "schemas",
    "twote-api",
    "accounts-backend",
    "profiles-backend"
]
resolver = "2"

[workspace.dependencies]
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.69"
thiserror = "1.0.48"
tonic = "0.10.0"
tonic-health = "0.10.0"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["auth"] }
hyper = "0.14.27"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
prost = "0.12.0"
prost-types = "0.12.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "uuid"] }
validator = { version = "0.16.1", features = ["derive"] }
argon2 = { version = "0.5.1", features = ["std"] }
rand = { version = "0.8.1", features = ["std_rng"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
mongodb = { version = "2.6.1", features = ["bson-uuid-1", "tokio-runtime"] }