[package]
name = "accounts-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "accounts-backend"
path = "src/main.rs"

[dependencies]
schemas = { path = "../schemas" }
tracing.workspace=true
tracing-subscriber.workspace=true
common = { path = "../common" }
anyhow.workspace=true
thiserror.workspace=true
tonic.workspace=true
tonic-health.workspace=true
tokio.workspace=true
sqlx.workspace=true
uuid.workspace=true
validator.workspace=true
argon2.workspace=true
rand.workspace=true
redis.workspace=true