[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
schemas = { path = "../schemas" }
serde.workspace=true
anyhow.workspace=true
futures.workspace=true
hyper.workspace=true
tokio.workspace=true
tower.workspace=true
tonic.workspace=true
tracing.workspace=true
redis.workspace=true
mongodb.workspace=true