[package]
name = "profiles-backend"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "profiles-backend"
path = "src/main.rs"

[dependencies]
schemas = { path = "../schemas" }
common = { path = "../common" }
serde.workspace=true
tracing.workspace=true
prost-types.workspace=true
tracing-subscriber.workspace=true
tonic.workspace=true
tower.workspace=true
tonic-health.workspace=true
tokio.workspace=true
mongodb.workspace=true
