[package]
name = "twote-api"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "twote-api"
path = "src/main.rs"

[dependencies]
schemas = { path = "../schemas" }
common = { path = "../common" }
tonic.workspace=true
tonic-health.workspace=true
tokio.workspace=true
anyhow.workspace=true